--- a/piece.css
+++ b/piece.css
@@ -16,16 +16,18 @@ html, body{
 }
 /*menu deroulant*/
 #menuvertical {
-   
+   position: relative;
     width: 16%;
     margin-left: 42%;
     height: 30px;
     list-style-type: none ; 
     margin-top: 10%;
     padding: 0px;  
+
 }
 
 #menuvertical ul {
+    position: relative;
     display: none ;
     list-style-type: none ; 
     margin: 0px;
@@ -44,10 +46,11 @@ html, body{
     padding: 0;
     margin: 0;
     margin-top: .5%;   
-    background-image: linear-gradient(to bottom right, #bbacac, #696969);
+    background-color: grey;
 }
 
 #menuvertical a {
+    position: relative;
     display: block ;
     width: 100%;
     text-decoration: none;
@@ -64,7 +67,7 @@ html, body{
     margin-top: 5%;  /*espace entre 1er choix et le menu deroulant*/
     left: 49%;  /*pour aligner le menu deroulant*/
     transform: translate(-50%, -50%);
-    z-index: 100; 
+    
 }
 
 #menuvertical ul a {
@@ -72,9 +75,7 @@ html, body{
     text-decoration: none;
 }
 
-#salon{
-    background-image: linear-gradient(to bottom right, #bbacac, #696969);
-}
+
 
 
 /*FIN menu deroulant*/
