--- a/designs/css/rooms.css
+++ b/designs/css/rooms.css
@@ -11,13 +11,78 @@ html, body{
     left: 0;
     width: 100%;
     height: 100%;
+    
+}
+/*menu deroulant*/
+#menuvertical {
+   position: relative;
+    width: 16%;
+    margin-left: 42%;
+    height: 30px;
+    list-style-type: none ; 
+    margin-top: 10%;
+    padding: 0px;  
 
 }
+
+#menuvertical ul {
+    position: relative;
+    display: none ;
+    list-style-type: none ; 
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    height: 30px;   
+
+}
+
+#menuvertical li {
+    position: relative;
+    border-radius: 15px 15px;
+    width: 100%;
+    height: 2em;
+    border: 2px solid #2D241E;
+    padding: 0;
+    margin: 0;
+    margin-top: .5%;   
+    background-color: grey;
+}
+
+#menuvertical a {
+    position: relative;
+    display: block ;
+    width: 100%;
+    text-decoration: none;
+   padding: 0;
+   margin: 0;
+   color: #21177d;
+    font-size: 200%;
+    text-align: center;
+}
+
+#menuvertical li:hover ul {
+    display: block ;
+    position: absolute;
+    margin-top: 5%;  /*espace entre 1er choix et le menu deroulant*/
+    left: 49%;  /*pour aligner le menu deroulant*/
+    transform: translate(-50%, -50%);
+    
+}
+
+#menuvertical ul a {
+    display: block;
+    text-decoration: none;
+}
+
+
+
+
+/*FIN menu deroulant*/
 
 #mode{
     position: relative;
     margin-top: 3%;
-
+    
     font-size: 150%;
 }
 #mode p{
@@ -115,6 +180,6 @@ html, body{
 }
 
 #valider input{
-
+    
     font-size: 100%;
 }
