--- a/designs/css/rooms.css
+++ b/designs/css/rooms.css
@@ -1,3 +1,4 @@
+
 html, body{
     margin: 0;
     padding: 0;
@@ -13,6 +14,7 @@ html, body{
     height: 100%;
     
 }
+
 /*menu deroulant*/
 #menuvertical {
    position: relative;
@@ -20,8 +22,9 @@ html, body{
     margin-left: 42%;
     height: 30px;
     list-style-type: none ; 
-    margin-top: 10%;
+    margin-top:5%;
     padding: 0px;  
+    z-index: 200;
 
 }
 
@@ -44,7 +47,7 @@ html, body{
     border: 2px solid #2D241E;
     padding: 0;
     margin: 0;
-    margin-top: .5%;   
+    margin-top: 0.5%;   
     background-color: grey;
 }
 
