--- a/designs/css/home.css
+++ b/designs/css/home.css
@@ -1,71 +1,4 @@
-/* barre de navigation */
-header ul{
-    list-style: none;
-    padding: 0px;
-    margin: 0px;
-    margin-left: 75px;
-    position: fixed;
 
-}
-
-header li {
-    float: left;
-    margin: 0px;
-    padding: 0px;
-    width: auto;
-    background-color:#00497A;
-}
-
-header ul :first-child {
-    border-radius: 10px 0 0 10px;
-}
-
-header ul :last-child {
-    border-radius: 0 10px 10px 0;
-}
-
-header li a{
-    display:block;
-    float:left;
-    width: auto;
-    color:white;
-    font-size: medium;
-    text-decoration:none;
-    padding: 5px;
-}
-
-header li a:hover{
-    text-decoration: underline;
-    color: orange;
-}
-
-header .deconnexion a  {
-    display: block;
-    float: right;
-    color:white;
-}
-
-header .deconnexion  {
-    position: fixed;
-    float: right;
-    padding: 5px;
-    right: 5em;
-    background-color:#00497A;
-    border-radius: 10px;
-
-}
-
-header .deconnexion a:hover  {
-    text-decoration: underline;
-    color: red;
-}
-
-header {
-    margin-top: 35px;
-    position: fixed;
-    top :5px;
-}
-/* fin barre de navigation */
 
 html, body{
     margin: 0;
@@ -85,133 +18,153 @@ a {
     text-decoration: none!important;
 }
 
-.en-tete {
-    width: 100%;
-    padding: 0;
+
+/*PIECE*/
+.piece {
+ position: relative;
+ display: inline-block;
+ float: left;
+ width: 300px;
+ height: 250px;
+ background-image: url("./designs/pictures/salon-moderne.jpg");
+ background-size: contain;
+ background-size: cover;
+ margin-left: 20%;
+ margin-top: 5%;
+ border: 4px solid #2D241E;
 }
 
-.en-tete .photo{
-    float: right;
-    width: 150px;
-    height: 150px;
-    background-image: url("photo-login.jpg");
-    background-size: contain;
-    background-size: cover;
-    margin-right: 33%;
-    margin-top: 5%;
+.piece .text {
+ color: orange;
+ font-size: 300%;
+ line-height: 1.5em;
+ text-shadow: 2px 2px 2px #000;
+ text-align: center;
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ transform: translate(-50%, -50%);
+ width: 100%;
+ opacity: 0;
+ transition: .5s ease;
 }
 
-.en-tete .info ul{
-    text-align: right;
-    float: left;
-    list-style: none;
-    margin-left: 30%;
-    margin-top: 5%;
-}
-
-.en-tete .info li{
-    padding-top: 5%;
-    font-size: 150%;
-}
-/*SALON*/
-.salon {
-    position: relative;
-    display: inline-block;
-    float: left;
-    width: 450px;
-    height: 400px;
-    background-image: url("salon-moderne.jpg");
-    background-size: contain;
-    background-size: cover;
-    margin-left: 10%;
-    margin-top: 10%;
-    margin-bottom: 2%;
-    border: 7px solid #2D241E;
-}
-
-.salon .text {
-    color: orange;
-    font-size: 400%;
-    line-height: 1.5em;
-    text-shadow: 2px 2px 2px #000;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    opacity: 0;
-    transition: .5s ease;
-}
-
-.salon .text:hover{
+.piece .text:hover{
     opacity: 1;
     transition: .5s ease;
 }
-/*FIN SALON*/
-/*BUREAU*/
-.bureau {
-    display: inline-block;
-    position: relative;
-    float: right;
-    width: 450px;
-    height: 400px;
-    background-image: url("bureau-moderne.jpg");
-    background-size: contain;
-    background-size: cover;
-    background-position: center;
-    margin-top: 9.25%;
-    margin-right: 10%;
-    border: 7px solid #2D241E;
+/*FIN PIECE*/
+
+/*PROFIL*/
+.profil {
+ display: inline-block;
+ position: relative;
+ float: right;
+ width: 300px;
+ height: 250px;
+ background-image: url("./designs/pictures/bureau-moderne.jpg");
+ background-size: contain;
+ background-size: cover;
+ background-position: center;
+ margin-top: 5%;
+ margin-right: 20%;
+ border: 4px solid #2D241E;
 }
 
-.bureau .text {
-    color: orange;
-    font-size: 400%;
-    line-height: 1.5em;
-    text-shadow: 2px 2px 2px #000;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    opacity: 0;
-    transition: .5s ease;
+.profil .text {
+ color: orange;
+ font-size: 300%;
+ line-height: 1.5em;
+ text-shadow: 2px 2px 2px #000;
+ text-align: center;
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ transform: translate(-50%, -50%);
+ width: 100%;
+ opacity: 0;
+ transition: .5s ease;
 }
 
-.bureau .text:hover{
+.profil .text:hover{
     opacity: 1;
     transition: .5s ease;
 }
-/*FIN BUREAU*/
+/*FIN PROFIL*/
 
-footer {
-    background-color: #00497A;
-    position:fixed;
-    bottom:0;
-    left:0;
-    width: 100%;
-    height: 8%;
+/*CATALOGUE*/
+.catalogue {
+ display:inline-block;
+ position: relative;
+ float: right;
+ width: 300px;
+ height: 250px;
+ background-image: url("./designs/pictures/catalogue.jpg");
+ background-size: contain;
+ background-size: cover;
+ background-position: center;
+ margin-right: 20%;
+ margin-top: 3%;
+ border: 4px solid #2D241E;
 }
 
-footer ul {
-    list-style: none;
-
+.catalogue .text {
+ color: orange;
+ font-size: 250%;
+ line-height: 1.5em;
+ text-shadow: 2px 2px 2px #000;
+ text-align: center;
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ transform: translate(-50%, -50%);
+ width: 100%;
+ opacity: 0;
+ transition: .5s ease;
 }
 
-footer ul li {
-    display: inline;
-    margin-left: 10px;
-    text-decoration: none;
-    margin-top: auto;
-    margin-bottom: auto;
+.catalogue .text:hover{
+    opacity: 1;
+    transition: .5s ease;
+}
+/*FIN CATALOGUE*/
+
+/*CONSOMMATION*/
+.consommation {
+ display: inline-block;
+ position: relative;
+ float: left;
+ width: 300px;
+ height: 250px;
+ background-image: url("./designs/pictures/graph.jpg");
+ background-size: contain;
+ background-size: cover;
+ background-position: center;
+ margin-top: 3%;
+ margin-left: 20%;
+ border: 4px solid #2D241E;
 }
 
-footer ul li a{
-    color: black;
+.consommation .text {
+ color: orange;
+ font-size: 200%;
+ line-height: 1.5em;
+ text-shadow: 2px 2px 2px #000;
+ text-align: center;
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ transform: translate(-50%, -50%);
+ width: 100%;
+ opacity: 0;
+ transition: .5s ease;
 }
-footer li:last-child {
-    float: right;
-    color: black;
+
+.consommation .text:hover{
+    opacity: 1;
+    transition: .5s ease;
 }
+/*FIN CONSOMMATION*/
+
+
+
