--- a/designs/css/rooms.css
+++ b/designs/css/rooms.css
@@ -1,3 +1,4 @@
+
 html, body{
     margin: 0;
     padding: 0;
@@ -11,26 +12,30 @@ html, body{
     left: 0;
     width: 100%;
     height: 100%;
-
+    
 }
+
 /*menu deroulant*/
 #menuvertical {
-
+   position: relative;
     width: 16%;
     margin-left: 42%;
     height: 30px;
-    list-style-type: none ;
-    margin-top: 10%;
-    padding: 0px;
+    list-style-type: none ; 
+    margin-top:5%;
+    padding: 0px;  
+    z-index: 200;
+
 }
 
 #menuvertical ul {
+    position: relative;
     display: none ;
-    list-style-type: none ;
+    list-style-type: none ; 
     margin: 0px;
     padding: 0px;
     width: 100%;
-    height: 30px;
+    height: 30px;   
 
 }
 
@@ -42,17 +47,18 @@ html, body{
     border: 2px solid #2D241E;
     padding: 0;
     margin: 0;
-    margin-top: .5%;
-    background-image: linear-gradient(to bottom right, #bbacac, #696969);
+    margin-top: 0.5%;   
+    background-color: grey;
 }
 
 #menuvertical a {
+    position: relative;
     display: block ;
     width: 100%;
     text-decoration: none;
-    padding: 0;
-    margin: 0;
-    color: #21177d;
+   padding: 0;
+   margin: 0;
+   color: #21177d;
     font-size: 200%;
     text-align: center;
 }
@@ -63,7 +69,7 @@ html, body{
     margin-top: 5%;  /*espace entre 1er choix et le menu deroulant*/
     left: 49%;  /*pour aligner le menu deroulant*/
     transform: translate(-50%, -50%);
-    z-index: 100;
+    
 }
 
 #menuvertical ul a {
@@ -71,9 +77,7 @@ html, body{
     text-decoration: none;
 }
 
-#salon{
-    background-image: linear-gradient(to bottom right, #bbacac, #696969);
-}
+
 
 
 /*FIN menu deroulant*/
@@ -81,7 +85,7 @@ html, body{
 #mode{
     position: relative;
     margin-top: 3%;
-
+    
     font-size: 150%;
 }
 #mode p{
@@ -179,6 +183,6 @@ html, body{
 }
 
 #valider input{
-
+    
     font-size: 100%;
 }
