--- a/designs/css/welcome.css
+++ b/designs/css/welcome.css
@@ -24,6 +24,10 @@ a{
 #inscrire:hover{
     box-shadow: 8px 8px 10px black;
 }
+
+#catalogue:hover{
+    box-shadow: 8px 8px 10px black;
+}
 #connexion{
     position: relative;
     float: right;
