--- a/designs/css/notFound.css
+++ b/designs/css/notFound.css
@@ -2,7 +2,8 @@ html, body{
     margin: 0;
     padding:0;
     width: 100%;
-    background-color:#00497A;
+    background-image:url('ins3bdd.png');
+    background-position: cover;
 }
 
 h1 {
