--- a/designs/css/rooms.css
+++ b/designs/css/rooms.css
@@ -22,7 +22,7 @@ html, body{
     margin-left: 42%;
     height: 30px;
     list-style-type: none ; 
-    margin-top:5%;
+    margin-top:1px;
     padding: 0px;  
     z-index: 200;
 
