--- a/designs/css/welcome.css
+++ b/designs/css/welcome.css
@@ -70,14 +70,13 @@ a{
     box-shadow: 8px 8px 30px black;
 }
 
-p{
+#titre{
     position: relative;
     display: inline-block;
-    float: left;
     margin-top: 2%;
     margin-left: 15%;
     font-size: 500%;
-    color: black;
+    color: white;
 }
 
 #G4B{
