--- a/designs/css/notFound.css
+++ b/designs/css/notFound.css
@@ -2,7 +2,7 @@ html, body{
     margin: 0;
     padding:0;
     width: 100%;
-    background-image:url('ins3bdd.PNG');
+    background-image:url('ins3bdd.png');
     background-size: cover;
 }
 
