--- a/designs/css/signup.css
+++ b/designs/css/signup.css
@@ -95,7 +95,7 @@ footer{
     margin-top: 0px;
 }
 
-/* Style all input fields */
+/* Modifie tous les input */
 input {
     width: 100%;
     height: 1.5em;
@@ -107,19 +107,26 @@ input {
     margin-bottom: 16px;
   }
   
-  /* Style the submit button */
+  /* Modifie tous le submit */
   input[type=submit] {
     background-color: #4CAF50;
     color: white;
   }
   
-  /* Style the container for inputs */
+  /* Modifie la boite des input */
   .container {
     background-color: #f1f1f1;
     padding: 20px;
   }
   
-  /* The message box is shown when the user clicks on the password field */
+  .form-button {
+      width: 8em;
+  }
+
+  .form-button:hover {
+      background-color: rgb(27, 122, 160);
+  }
+  /* La boite de message est affiché losque l'utilisateur clique sur le champ mdp */
   #message {
     display:none;
     background: #f1f1f1;
@@ -134,7 +141,7 @@ input {
     font-size: 18px;
   }
   
-  /* Add a green text color and a checkmark when the requirements are right */
+  /* Lorsque que le bouton est valide, ajoute du vert */
   .valid {
     color: green;
   }
@@ -145,7 +152,7 @@ input {
     content: "&#10004;";
   }
   
-  /* Add a red text color and an "x" icon when the requirements are wrong */
+  /* ajoute du rouge et un x, lorsque le mdp est faux */
   .invalid {
     color: red;
   }
