--- a/designs/css/sensors.css
+++ b/designs/css/sensors.css
@@ -9,6 +9,7 @@ html,body{
 
 section{
     padding-top: 10%;
+    text-align: center;
 }
 
 h1{
@@ -16,15 +17,24 @@ h1{
     text-align: center;
 }
 
-li {
-    float:left;
-    margin:auto;
-    padding:0;
-    background-color:#00497A;
+table
+{
+    border-collapse: collapse; /* Les bordures du tableau seront collées (plus joli) */
     text-align: center;
-    text-decoration: none;
-    color:white;
+    margin-left: 35%;
 }
+
+td /* Toutes les cellules des tableaux... */
+{
+    border: 1px solid white; /* auront une bordure de 1px */
+    text-align: center;
+}
+
+thead{
+    background-color:#77B5FE;
+    text-align: center;
+}
+
 a{
     text-decoration: none;
     color:white;
