--- a/designs/css/welcome.css
+++ b/designs/css/welcome.css
@@ -33,7 +33,7 @@ a{
     float: right;
     margin-right: 20%;
     margin-top: 20%;
-    width: 12%;
+    width: 8em;
     height: 2em;
     font-size: 25px;
     background-color: #00497A;
@@ -47,7 +47,7 @@ a{
     float: right;
     margin-right: -12%;
     margin-top: 25%;
-    width: 12%;
+    width: 8em;
     height: 2em;
     font-size: 25px;
     background-color: #00497A;
@@ -61,7 +61,7 @@ a{
     float: right;
     margin-right: -12%;
     margin-top: 30%;
-    width: 12%;
+    width: 8em;
     height: 2em;
     font-size: 25px;
     background-color: #00497A;
@@ -107,14 +107,7 @@ a{
 
 #design{
     position: absolute;
-    width: 15%;
-    height: 15%;
     float: right;
     bottom: 0;
     right: 0;
 }
-
-#logo {
-    width: 50%;
-    height: auto;
- }
