--- a/designs/css/houseList.css
+++ b/designs/css/houseList.css
@@ -1,4 +1,41 @@
-*{
-    text-align: center;
-    margin-top: 100px;
+#fond {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
+
+h1{
+    position: relative;
+    z-index: 2;
+    text-align: center;
+    margin-top: 10%;
+    color: #00497A;
+    text-decoration: underline;
+
+}
+
+header{
+    position: absolute;
+    z-index: 2;
+    margin-top: 0px;
+}
+
+p{
+    position: relative;
+    z-index: 2;
+   text-align: center;
+    font-size: large;
+
+}
+
+form{
+    position: relative;
+    z-index: 2;
+    text-align: center;
+    font-size: large;
+}
+
+
