--- a/designs/css/clientProfile.css
+++ b/designs/css/clientProfile.css
@@ -16,7 +16,7 @@ button {
     display: inline-block;
     padding: 8px;
     color: white;
-    background-color: #000;
+    background-color: #00497A;
     text-align: center;
     cursor: pointer;
     width: 100%;
