--- a/designs/css/editProfile.css
+++ b/designs/css/editProfile.css
@@ -6,35 +6,106 @@ body{
 	height: 100%;
 	position: relative;
 }
+/* barre de navigation */
+header ul{
+	list-style: none;
+	padding: 0px;
+	margin: 0px;
+	margin-left: 75px;
+}
 
+header li {
+	float: left;
+	margin: 0px;
+	padding: 0px;
+	width: auto;
+	background-color:#00497A;
+}
 
+header ul :first-child {
+	border-radius: 10px 0 0 10px;
+}
+
+header ul :last-child {
+	border-radius: 0 10px 10px 0;
+}
+
+header li a{
+	display:block;
+	float:left;
+	width: auto;
+	color:white;
+	font-size: medium;
+	text-decoration:none;
+	padding: 5px;
+}
+
+header li a:hover{
+	text-decoration: underline;
+	color: orange;
+}
+
+header .deconnexion a  {
+	display: block;
+	float: right;
+	color:white;
+}
+
+header .deconnexion  {
+	display: block;
+	float: right;
+	padding: 5px;
+	margin: 0px;
+	margin-right: 50px;
+	background-color:#00497A;
+	border-radius: 10px;
+}
+
+header .deconnexion a:hover  {
+	text-decoration: underline;
+	color: red;
+}
+
+header {
+	margin-top: 25px;
+	background: #00497A;
+}
+/* fin barre de navigation */
 
 h1
 {
 	color:white;
-  	font-size: 42px;
- 	font-weight: 600;
-  	font-family: LibreBaskerville;
-  	text-align: center;
-  	padding-top: 40px
+	font-size: 42px;
+	font-weight: 600;
+	font-family: LibreBaskerville;
+	text-align: center;
+	padding-top: 40px
 }
-
+header {
+	padding-top: 1%;
+	background-color:#00497A;
+	background-size: cover;
+	background-position: bottom center;
+	height: 100%;
+	width: 100%;
+	padding-bottom: 2%;
+}
 section {
 	background-color:#00497A;
-  background-size: cover;
-  background-position: bottom center;
-  font-family: LibreBaskerville;
-  padding-top: 2%;
-  height: 100%;
-  width: 100%;
-  color:white;
-  text-align: center;
-  
+	background-size: cover;
+	background-position: bottom center;
+	font-family: LibreBaskerville;
+	padding-top: 2%;
+	height: 100%;
+	width: 100%;
+	color:white;
+	text-align: center;
+
 }
 #soussection{
 	display: flex;
-    justify-content: space-around;
-    
+	justify-content: space-around;
+
 
 }
 .Contact{
@@ -51,12 +122,12 @@ h2
 
 h3{
 	color:white;
-	font-size: small; 
+	font-size: small;
 }
 
 p
 {
-    color: white;
+	color: white;
 }
 
 
@@ -78,7 +149,7 @@ footer ul {
 footer ul li {
 	display: inline;
 	margin-left: 10px;
-	text-decoration: none;   
+	text-decoration: none;
 	margin-top: auto;
 	margin-bottom: auto;
 	background-color: white;
@@ -103,10 +174,12 @@ footer li:last-child {
 	padding: 0;
 	overflow: hidden;
 	background-color: white;
+
 }
 footer ul :first-child {
 	border-radius: 10px 0 0 10px;
 }
+
 footer ul :last-child {
 	border-radius: 0 10px 10px 0;
 }
@@ -116,11 +189,11 @@ footer li {
 	padding: 0px;
 	width: auto;
 	background-color:white;
-	list-style-type: none;   
+	list-style-type: none;
 }
 footer li a{
 	display:block;
-    float:left;   
+    float:left;
     width: auto;
     color:white;
     font-size: medium;
@@ -144,6 +217,7 @@ footer li a{
 	bottom: 40px;
 	z-index: 1;
 }
+
 /* Crated by */
 
 /*#crea {
