--- a/designs/css/editProfile.css
+++ b/designs/css/editProfile.css
@@ -1,30 +1,40 @@
+*{
+	background: #00497A;
+	font-family: "Libre Baskerville", Arial;
+}
+body{
+	height: 100%;
+	position: relative;
+}
+
+
 
 h1
 {
 	color:white;
-	font-size: 42px;
-	font-weight: 600;
-	font-family: LibreBaskerville;
-	text-align: center;
-	padding-top: 40px
+  	font-size: 42px;
+ 	font-weight: 600;
+  	font-family: LibreBaskerville;
+  	text-align: center;
+  	padding-top: 40px
 }
 
 section {
 	background-color:#00497A;
-	background-size: cover;
-	background-position: bottom center;
-	font-family: LibreBaskerville;
-	padding-top: 2%;
-	height: 100%;
-	width: 100%;
-	color:white;
-	text-align: center;
-
+  background-size: cover;
+  background-position: bottom center;
+  font-family: LibreBaskerville;
+  padding-top: 2%;
+  height: 100%;
+  width: 100%;
+  color:white;
+  text-align: center;
+  
 }
 #soussection{
 	display: flex;
-	justify-content: space-around;
-
+    justify-content: space-around;
+    
 
 }
 .Contact{
@@ -41,16 +51,49 @@ h2
 
 h3{
 	color:white;
-	font-size: small;
+	font-size: small; 
 }
 
 p
 {
-	color: white;
+    color: white;
 }
 
 
 /* Bas de page */
+
+footer {
+	background-color: white;
+	position:fixed;
+	bottom:0;
+	left:0;
+	width: 100%;
+	height: 8%;
+
+}
+footer ul {
+	list-style: none;
+	background-color: white;
+}
+footer ul li {
+	display: inline;
+	margin-left: 10px;
+	text-decoration: none;   
+	margin-top: auto;
+	margin-bottom: auto;
+	background-color: white;
+}
+footer ul li a{
+	color: black;
+	background-color: white;
+}
+footer li:last-child {
+	float: right;
+	color: black;
+}
+#createdby{
+	position: left;
+}
 
 
 
@@ -60,12 +103,10 @@ p
 	padding: 0;
 	overflow: hidden;
 	background-color: white;
-
 }
 footer ul :first-child {
 	border-radius: 10px 0 0 10px;
 }
-
 footer ul :last-child {
 	border-radius: 0 10px 10px 0;
 }
@@ -75,11 +116,11 @@ footer li {
 	padding: 0px;
 	width: auto;
 	background-color:white;
-	list-style-type: none;
+	list-style-type: none;   
 }
 footer li a{
 	display:block;
-    float:left;
+    float:left;   
     width: auto;
     color:white;
     font-size: medium;
@@ -103,7 +144,6 @@ footer li a{
 	bottom: 40px;
 	z-index: 1;
 }
-
 /* Crated by */
 
 /*#crea {
