--- a/designs/css/footer.css
+++ b/designs/css/footer.css
@@ -2,17 +2,18 @@
 
 footer {
     background-color: white;
-    
+    position:fixed;
     bottom:0;
     left:0;
     width: 100%;
     height: 8%;
-
 }
+
 footer ul {
     list-style: none;
     background-color: white;
 }
+
 footer ul li {
     display: inline;
     margin-left: 10px;
@@ -21,25 +22,22 @@ footer ul li {
     margin-bottom: auto;
     background-color: white;
 }
+
 footer ul li a{
     color: black;
     background-color: white;
 }
+
 footer li:last-child {
-     float: right;
+     float: left;
      color: black;
  }
 
-footer li:first-child {
-    float: left;
-    color: black;
-}
-
 #createdby{
-    position: left;
+    float: left;
 }
 
 .logo{
-    height: 3%;
-    width: 3%;
+    height: 4%;
+    width: 4%;
 }
