--- a/designs/css/faq.css
+++ b/designs/css/faq.css
@@ -8,11 +8,10 @@
     color: #00497A;
 }
  
-.faq_reponse {
+.faq_answer_container {
     height: 0px;
     overflow: hidden;
     padding: 0px;
     color: #00497A;
 
 }
-
