--- a/designs/css/signup.css
+++ b/designs/css/signup.css
@@ -17,7 +17,7 @@ h2{
 header {
     background-color: #00497A;
 }
-ul {
+.body ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -25,11 +25,11 @@ ul {
     background-color: #00497A;
 }
 
-li {
+.body li {
     float: left;
 }
 
-li a {
+.body li a {
     display: block;
     color: white;
     text-align: center;
@@ -37,11 +37,11 @@ li a {
     text-decoration: none;
 }
 
-li:last-child{
+.body li:last-child{
     float:right;
 }
 
-li a:hover {
+.body li a:hover {
     background-color: #111;
 }
 
@@ -56,7 +56,7 @@ li a:hover {
     float:left;
 }
 
-li:first-child{
+.body li:first-child{
     width: 100px;
     height:50px;
 }
@@ -83,18 +83,6 @@ section {
     text-align: center;
 }
 
-footer{
-    background-color:white;
-    background-size: cover;
-    padding-top: 0px;
-    background-position: bottom center;
-    font-family: LibreBaskerville;
-    color: #00497A;
-    height: 100%;
-    width: 100%;
-    text-align: right;
-    margin-top: 0px;
-}
 
 /* Modifie tous les input */
 input {
