--- a/designs/css/forumAdmin.css
+++ b/designs/css/forumAdmin.css
@@ -29,7 +29,7 @@ table{
 .sujet{
     text-align: center;
     width:60%;
-    background-color: rgb(7,68,92);
+    background-color: lightsteelblue;
     font-size: 120%;
 
 }
