--- a/designs/css/forum.css
+++ b/designs/css/forum.css
@@ -31,7 +31,7 @@ table{
 .sujet{
     text-align: center;
     width:60%;
-    background-color: rgb(7,68,92);
+    background-color: lightsteelblue;
     font-size: 120%;
 
 }
