--- a/designs/css/welcome.css
+++ b/designs/css/welcome.css
@@ -2,6 +2,7 @@ html, body {
     margin: 0;
     padding: 0;
     width: 100%;
+    overflow: hidden;
 }
 #fond {
     position: absolute;
@@ -17,7 +18,7 @@ a{
     line-height: 1.9em;
 }
 
-.connexion:hover{
+#connexion:hover{
     box-shadow: 8px 8px 10px black;
 }
 
